--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,39 +2,31 @@ version: '3.8'
 
 services:
   chat:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        - FLASK_ENV=${FLASK_ENV}
-    restart: ${DOCKER_RESTART_POLICY}
-    expose:
-      - "${PORT}"
+    build: .
+    restart: always
     environment:
       - FLASK_ENV=${FLASK_ENV}
       - FLASK_DEBUG=${FLASK_DEBUG}
       - SECRET_KEY=${SECRET_KEY}
-      - HOST=${HOST}
-      - PORT=${PORT}
       - GUNICORN_WORKERS=${GUNICORN_WORKERS}
       - GUNICORN_WORKER_CLASS=${GUNICORN_WORKER_CLASS}
+      - GUNICORN_HOST=${GUNICORN_HOST}
+      - GUNICORN_PORT=${GUNICORN_PORT}
     command: >
       gunicorn
-      --workers ${GUNICORN_WORKERS}
       --worker-class ${GUNICORN_WORKER_CLASS}
-      --bind ${HOST}:${PORT}
+      --workers ${GUNICORN_WORKERS}
+      --bind ${GUNICORN_HOST}:${GUNICORN_PORT}
+      --log-level info
+      --access-logfile -
+      --error-logfile -
       app:app
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://${HOST}:${PORT}/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
     networks:
       - chat_network
 
   caddy:
     image: caddy:2-alpine
-    restart: ${DOCKER_RESTART_POLICY}
+    restart: always
     ports:
       - "80:80"
       - "443:443"
@@ -44,7 +36,6 @@ services:
       - caddy_config:/config
     environment:
       - DOMAIN=${DOMAIN}
-      - EMAIL=${EMAIL}
     depends_on:
       - chat
     networks:
