--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,18 @@ blinker==1.9.0
 click==8.1.7
 colorama==0.4.6
 dnspython==2.7.0
-eventlet==0.37.0
-Flask==3.0.3
-Flask-SocketIO==5.4.1
+eventlet==0.33.3
+flask==2.3.3
+flask-socketio==5.3.6
 greenlet==3.1.1
-gunicorn==23.0.0
+gunicorn==21.2.0
 h11==0.14.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
 packaging==24.2
-python-engineio==4.10.1
-python-socketio==5.11.4
+python-engineio==4.8.0
+python-socketio==5.10.0
 simple-websocket==1.1.0
 Werkzeug==3.1.3
 wsproto==1.2.0
